--- a/src/main/resources/zk.properties
+++ b/src/main/resources/zk.properties
@@ -1,5 +1,6 @@
 #Zookeeper
-zk.master.host=127.0.0.1:2181
+zk.host=127.0.0.1:2181
 zk.lockPath = /mylock
 zk.tryTime=1000
 zk.tryCount=3
+zk.sessionOutTime =60000
