--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.druid.maxPoolPreparedStatementPerConnectionSize=20
 
 
 #mybatis
-#mybatis.type-aliases-package=com.lf.entity
+mybatis.type-aliases-package=cn.zjc.model
 mybatis.mapper-locations=classpath:mapping/*.xml
 #mappers 多个接口时逗号隔开
 #mapper.mappers=tk.mybatis.mapper.common.Mapper
