--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,4 @@
-# 驱动配置信息
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/zjc?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull  
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
-#连接池的配置信息
-## 初始化大小，最小，最大
-spring.druid.initialSize=5
-spring.druid.minIdle=5
-spring.druid.maxActive=20
-## 配置获取连接等待超时的时间
-spring.druid.maxWait=60000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-spring.druid.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
-spring.druid.minEvictableIdleTimeMillis=300000
-spring.druid.validationQuery=SELECT 1 FROM DUAL
-spring.druid.testWhileIdle=true
-spring.druid.testOnBorrow=false
-spring.druid.testOnReturn=false
-spring.druid.poolPreparedStatements=true
-spring.druid.maxPoolPreparedStatementPerConnectionSize=20
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-#spring.druid.filters=stat,wall,log4j
-# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-#spring.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-##
-#spring.profiles.active=dev
-
-
-#mybatis
-mybatis.type-aliases-package=cn.zjc.model
-mybatis.mapper-locations=classpath:mapping/*.xml
 #mappers 多个接口时逗号隔开
 #mapper.mappers=tk.mybatis.mapper.common.Mapper
 #mapper.mappers=com.lf.util.MyMapper
@@ -44,3 +10,5 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+logging.level.cn.mrdear.mapper = trace
