--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 mapper.not-empty=false
 mapper.identity=MYSQL
-
-logging.level.cn.mrdear.mapper = trace
+#--------不使用log4j时的日志输出配置--------#start
+#使用springboot的logging日志输出不要将pom中的spring-boot-starter-logging排除
+#mybatis打印sql
+logging.level.cn.zjc.mapper = trace
+#root日志以WARN级别输出
+#logging.level.root=WARN
+#springframework.web日志以DEBUG级别输出
+logging.level.org.springframework.web=DEBUG
+#logging.file=E:/log/my.log
+logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
+#--------不使用log4j时的日志输出配置--------#end
