--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,29 @@
 mapper.not-empty=false
 mapper.identity=MYSQL
-#--------不使用log4j时的日志输出配置--------#start
-#使用springboot的logging日志输出不要将pom中的spring-boot-starter-logging排除
-#mybatis打印sql
+#--------\u4E0D\u4F7F\u7528log4j\u65F6\u7684\u65E5\u5FD7\u8F93\u51FA\u914D\u7F6E--------#start
+#\u4F7F\u7528springboot\u7684logging\u65E5\u5FD7\u8F93\u51FA\u4E0D\u8981\u5C06pom\u4E2D\u7684spring-boot-starter-logging\u6392\u9664
+#mybatis\u6253\u5370sql
 logging.level.cn.zjc.mapper = trace
-#root日志以WARN级别输出
+#root\u65E5\u5FD7\u4EE5WARN\u7EA7\u522B\u8F93\u51FA
 #logging.level.root=WARN
-#springframework.web日志以DEBUG级别输出
+#springframework.web\u65E5\u5FD7\u4EE5DEBUG\u7EA7\u522B\u8F93\u51FA
 logging.level.org.springframework.web=DEBUG
 #logging.file=E:/log/my.log
 logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
 logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
-#--------不使用log4j时的日志输出配置--------#end
+#--------\u4E0D\u4F7F\u7528log4j\u65F6\u7684\u65E5\u5FD7\u8F93\u51FA\u914D\u7F6E--------#end
+#-------E-mail\u914D\u7F6E-----------
+#\u53D1\u4EF6\u4EBA\u90AE\u7BB1\u8D26\u53F7
+email.EmailAccount = zjc_1122@163.com
+#\u53D1\u4EF6\u4EBA\u90AE\u7BB1\u5BC6\u7801
+email.EmailPassword = zjc119119
+#\u6536\u4EF6\u4EBA\u90AE\u7BB1\u8D26\u53F7
+email.receiveMailAccount = 250512412@qq.com
+#SMTP \u670D\u52A1\u5668\u5730\u5740
+email.EmailSMTPHost = smtp.163.com
+#\u90AE\u4EF6\u6807\u9898
+email.Subject = Throwing Message
+#\u90AE\u4EF6\u9644\u4EF6\u8DEF\u5F84
+email.Path = E:\\throwing\\
+#\u90AE\u4EF6\u9644\u4EF6\u540D\u5B57
+email.AttachmentName = ThrowInfo
