--- a/src/main/resources/datasources.properties
+++ b/src/main/resources/datasources.properties
@@ -1,18 +1,18 @@
-# 驱动配置信息
+# \u9A71\u52A8\u914D\u7F6E\u4FE1\u606F
 data.datasource.url = jdbc:mysql://127.0.0.1:3306/zjc?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull  
 data.datasource.username = root
 data.datasource.password = root
 data.datasource.driverClassName = com.mysql.jdbc.Driver
-#连接池的配置信息
-## 初始化大小，最小，最大
+#\u8FDE\u63A5\u6C60\u7684\u914D\u7F6E\u4FE1\u606F
+## \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
 data.druid.initialSize=5
 data.druid.minIdle=5
 data.druid.maxActive=20
-## 配置获取连接等待超时的时间
+## \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
 data.druid.maxWait=60000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 data.druid.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
+# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 data.druid.minEvictableIdleTimeMillis=300000
 data.druid.validationQuery=SELECT 1 FROM DUAL
 data.druid.testWhileIdle=true
