--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,24 +1,24 @@
-# \u65E5\u5FD7\u7EA7\u522B\uFF0C\u65E5\u5FD7\u8FFD\u52A0\u7A0B\u5E8F\u5217\u8868...
+# 日志级别，日志追加程序列表...
 log4j.rootLogger=info,ServerDailyRollingFile,stdout
-#\u6587\u4EF6\u4FDD\u5B58\u65E5\u5FD7
+#文件保存日志
 log4j.appender.ServerDailyRollingFile=org.apache.log4j.DailyRollingFileAppender
-#\u6587\u4EF6\u4FDD\u5B58\u65E5\u5FD7\u65E5\u671F\u683C\u5F0F,\u6309\u6BCF\u5929\u6253\u5370
+#文件保存日志日期格式,按每天打印
 log4j.appender.ServerDailyRollingFile.DatePattern='.'yyyy-MM-dd
-#\u6587\u4EF6\u4FDD\u5B58\u65E5\u5FD7\u6587\u4EF6\u8DEF\u5F84
+#文件保存日志文件路径
 log4j.appender.ServerDailyRollingFile.File=E:/log/log4j.log
-#\u6587\u4EF6\u4FDD\u5B58\u65E5\u5FD7\u5E03\u5C40\u7A0B\u5E8F
+#文件保存日志布局程序
 log4j.appender.ServerDailyRollingFile.layout=org.apache.log4j.PatternLayout
-#\u6587\u4EF6\u4FDD\u5B58\u65E5\u5FD7\u5E03\u5C40\u683C\u5F0F
+#文件保存日志布局格式
 log4j.appender.ServerDailyRollingFile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p [%c] - %m%n
-#\u6587\u4EF6\u4FDD\u5B58\u65E5\u5FD7\u9700\u8981\u5411\u540E\u8FFD\u52A0\uFF08false\u662F\u6D4B\u8BD5\u7684\u65F6\u5019\u65E5\u5FD7\u6587\u4EF6\u5C31\u6E05\u7A7A\uFF0Ctrue\u7684\u8BDD\u5C31\u662F\u5728\u4E4B\u524D\u57FA\u7840\u4E0A\u5F80\u540E\u5199\uFF09
+#文件保存日志需要向后追加（false是测试的时候日志文件就清空，true的话就是在之前基础上往后写）
 log4j.appender.ServerDailyRollingFile.Append=true
-#\u63A7\u5236\u53F0\u65E5\u5FD7
+#控制台日志
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#\u63A7\u5236\u53F0\u65E5\u5FD7\u5E03\u5C40\u7A0B\u5E8F
+#控制台日志布局程序
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#\u63A7\u5236\u53F0\u65E5\u5FD7\u5E03\u5C40\u683C\u5F0F
+#控制台日志布局格式
 log4j.appender.stdout.layout.ConversionPattern=%d yyyy-MM-dd HH:mm:ss %p [%c] %m%n
-#\u6253\u5370mybatis\u7684sql\u8BED\u53E5
+#打印mybatis的sql语句
 log4j.logger.cn.zjc.mapper=TRACE
-#Spring\u65E5\u5FD7
+#Spring日志
 log4j.logger.org.springframework.web=DEBUG
