--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -18,9 +18,9 @@ redis.pool.maxWaitMillis=5000
 redis.pool.testWhileIdle=true
 redis.pool.testOnBorrow=true
 redis.pool.testOnReturn=true
-#\u534A\u4E2A\u5C0F\u65F6\u540E\u6E05\u9664\u6389\u591A\u4F59\u7684\u7A7A\u95F2\u94FE\u63A5  \u907F\u514Dredis\u670D\u52A1\u5668\u8FDE\u63A5\u6570\u8FC7\u591A\u6302\u6389
+#半个小时后清除掉多余的空闲链接  避免redis服务器连接数过多挂掉
 redis.pool.timeBetweenEvictionRunsMillis=1800000
-#\u6BCF\u6B21\u6E05\u9664\u7684\u7A7A\u95F2\u8FDE\u63A5\u6570
+#每次清除的空闲连接数
 redis.pool.numTestsPerEvictionRun=20
 redis.pool.nodes=
 push.data.redis.defaultExpiration=3600
