--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,4 @@ email.Subject = Throwing Message
 #邮件附件路径
 email.Path = E:\\throwing\\
 #邮件附件名字
-email.AttachmentName = ThrowInfo
+email.AttachmentName = ThrowingMessage
