--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ email.Subject = Throwing Message
 email.Path = E:\\throwing\\
 #邮件附件名字
 email.AttachmentName = ThrowingMessage
+#-------elasticsearch配置-----------
+spring.data.elasticsearch.cluster-name = elasticsearch
+spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
