--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+		<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -154,6 +162,25 @@
 			<artifactId>jna</artifactId>
 			<version>3.0.9</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.session</groupId>-->
+			<!--<artifactId>spring-session</artifactId>-->
+			<!--<version>1.0.2.RELEASE</version>-->
+		<!--</dependency>-->
+	<!--<dependency>-->
+		<!--<groupId>org.springframework.session</groupId>-->
+		<!--<artifactId>spring-session-data-redis</artifactId>-->
+		<!--<version>1.0.2.RELEASE</version>-->
+	<!--</dependency>-->
 	</dependencies>
 
 	<build>
