--- a/pom.xml
+++ b/pom.xml
@@ -171,16 +171,16 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.session</groupId>-->
-			<!--<artifactId>spring-session</artifactId>-->
-			<!--<version>1.0.2.RELEASE</version>-->
-		<!--</dependency>-->
-	<!--<dependency>-->
-		<!--<groupId>org.springframework.session</groupId>-->
-		<!--<artifactId>spring-session-data-redis</artifactId>-->
-		<!--<version>1.0.2.RELEASE</version>-->
-	<!--</dependency>-->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+			<version>1.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+			<version>1.0.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
