--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ email.AttachmentName = ThrowingMessage
 #-------elasticsearch配置-----------
 spring.data.elasticsearch.cluster-name = elasticsearch
 spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
+httpHost.host=127.0.0.1
+httpHost.port=9200
+httpHost.schema=http
+esclient.connectNum=100
+esclient.connectPerRoute=100
