--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
             <version>1.3.2</version>
         </dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session</artifactId>
 			<version>1.0.2.RELEASE</version>
