--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ email.Path = E:\\throwing\\
 #邮件附件名字
 email.AttachmentName = ThrowingMessage
 #-------elasticsearch配置-----------
-spring.data.elasticsearch.cluster-name = elasticsearch
+spring.data.elasticsearch.cluster-name = zjc-application
 spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
 httpHost.host=127.0.0.1
 httpHost.port=9200
