--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.46</version>
+		</dependency>
 		<!--elasticsearch-->
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
