--- a/pom.xml
+++ b/pom.xml
@@ -145,11 +145,12 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>18.0</version>
+			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
+			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
