--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,11 @@
 			<artifactId>spring-session-data-redis</artifactId>
 			<version>1.0.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.6.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
