--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,22 @@
 mapper.not-empty=false
 mapper.identity=MYSQL
-#--------不使用log4j时的日志输出配置--------#start
+#--------日志输出配置--------#start
 #使用springboot的logging日志输出不要将pom中的spring-boot-starter-logging排除
 #mybatis打印sql
-logging.level.cn.zjc.mapper = trace
+#logging.level.cn.zjc.mapper = DEBUG
+#controller层日志 WARN级别输出
+#logging.level.cn.zjc.controller=WARN
 #root日志以WARN级别输出
 #logging.level.root=WARN
 #springframework.web日志以DEBUG级别输出
-logging.level.org.springframework.web=DEBUG
-#logging.file=E:/log/my.log
-logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
-logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
-#--------不使用log4j时的日志输出配置--------#end
-#-------E-mail配置-----------
+#logging.level.org.springframework.web=DEBUG
+#logging.file=D:/logs/spring-boot-logging.log
+#logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+#logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
+# 配置logback文件
+logging.config = classpath:logback-spring.xml
+#--------日志输出配置----------#end
+#-------E-mail配置-----------#start
 #发件人邮箱账号
 email.EmailAccount = zjc_1122@163.com
 #发件人邮箱密码
@@ -27,7 +31,8 @@ email.Subject = Throwing Message
 email.Path = E:\\throwing\\
 #邮件附件名字
 email.AttachmentName = ThrowingMessage
-#-------elasticsearch配置-----------
+#----------E-mail配置-----------#end
+#-------elasticsearch配置------#start
 spring.data.elasticsearch.cluster-name = zjc-application
 spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
 httpHost.host=127.0.0.1
@@ -35,3 +40,4 @@ httpHost.port=9200
 httpHost.schema=http
 esclient.connectNum=100
 esclient.connectPerRoute=100
+#-------elasticsearch配置-------#end
