--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,43 @@
-#--------日志输出配置--------#start
-#使用springboot的logging日志输出不要将pom中的spring-boot-starter-logging排除
-#mybatis打印sql
+server.tomcat.uri-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.messages.encoding=UTF-8
+#--------\u65E5\u5FD7\u8F93\u51FA\u914D\u7F6E--------#start
+#\u4F7F\u7528springboot\u7684logging\u65E5\u5FD7\u8F93\u51FA\u4E0D\u8981\u5C06pom\u4E2D\u7684spring-boot-starter-logging\u6392\u9664
+#mybatis\u6253\u5370sql
 #logging.level.cn.zjc.mapper = DEBUG
-#controller层日志 WARN级别输出
+#controller\u5C42\u65E5\u5FD7 WARN\u7EA7\u522B\u8F93\u51FA
 #logging.level.cn.zjc.controller=WARN
-#root日志以WARN级别输出
+#root\u65E5\u5FD7\u4EE5WARN\u7EA7\u522B\u8F93\u51FA
 #logging.level.root=WARN
-#springframework.web日志以DEBUG级别输出
+#springframework.web\u65E5\u5FD7\u4EE5DEBUG\u7EA7\u522B\u8F93\u51FA
 #logging.level.org.springframework.web=DEBUG
 #logging.file=D:/logs/spring-boot-logging.log
 #logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
 #logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
-# 配置logback文件
+# \u914D\u7F6Elogback\u6587\u4EF6
 logging.config = classpath:logback-spring.xml
-#--------日志输出配置----------#end
-#-------E-mail配置-----------#start
-#发件人邮箱账号
-email.EmailAccount = zjc_1122@163.com
-#发件人邮箱密码
-email.EmailPassword = zjc119119
-#收件人邮箱账号
-email.receiveMailAccount = 250512412@qq.com
-#SMTP 服务器地址
-email.EmailSMTPHost = smtp.163.com
-#邮件标题
-email.Subject = Throwing Message
-#邮件附件路径
-email.Path = E:\\throwing\\
-#邮件附件名字
-email.AttachmentName = ThrowingMessage
-#----------E-mail配置-----------#end
-#-------elasticsearch配置------#start
+#--------\u65E5\u5FD7\u8F93\u51FA\u914D\u7F6E----------#end
+#-------E-mail\u914D\u7F6E-----------#start
+#\u53D1\u4EF6\u4EBA\u90AE\u7BB1\u8D26\u53F7
+email.send = zjc_1122@163.com
+#\u53D1\u4EF6\u4EBA\u90AE\u7BB1\u5BC6\u7801
+email.password = zjc119119
+#\u6536\u4EF6\u4EBA\u90AE\u7BB1\u8D26\u53F7
+email.receive = 250512412@qq.com
+#SMTP \u670D\u52A1\u5668\u5730\u5740
+email.SMTPHost = smtp.163.com
+#\u90AE\u4EF6\u6807\u9898
+email.subject = \u5F02\u5E38\u4FE1\u606F
+#\u90AE\u4EF6\u9644\u4EF6\u8DEF\u5F84
+email.path = E:\\throwing\\
+#\u90AE\u4EF6\u9644\u4EF6\u540D\u5B57
+email.attachmentName = ThrowingMessage
+#\u90AE\u4EF6\u6A21\u677F\u540D\u5B57
+email.template = message.ftl
+#----------E-mail\u914D\u7F6E-----------#end
+#-------elasticsearch\u914D\u7F6E------#start
 spring.data.elasticsearch.cluster-name = zjc-application
 spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
 httpHost.host=127.0.0.1
@@ -38,4 +45,12 @@ httpHost.port=9200
 httpHost.schema=http
 esclient.connectNum=100
 esclient.connectPerRoute=100
-#-------elasticsearch配置-------#end
+#-------elasticsearch\u914D\u7F6E-------#end
+#----------spring-mail\u914D\u7F6E-----------#start
+spring.mail.host=smtp.163.com
+spring.mail.username=zjc_1122@163.com
+spring.mail.password=zjc119119
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+#----------spring-mail\u914D\u7F6E-----------#end
