--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ email.SMTPHost = smtp.163.com
 #\u90AE\u4EF6\u6807\u9898
 email.subject = \u5F02\u5E38\u4FE1\u606F
 #\u90AE\u4EF6\u9644\u4EF6\u8DEF\u5F84
-email.path = E:\\throwing\\
+email.path = \\throwing\\
 #\u90AE\u4EF6\u9644\u4EF6\u540D\u5B57
 email.attachmentName = ThrowingMessage
 #\u90AE\u4EF6\u6A21\u677F\u540D\u5B57
