--- a/pom.xml
+++ b/pom.xml
@@ -203,16 +203,16 @@
 			<artifactId>jetcache-starter-redis</artifactId>
 			<version>2.4.4</version>
 		</dependency>
-		<dependency>
-			<groupId>com.alicp.jetcache</groupId>
-			<artifactId>jetcache-anno</artifactId>
-			<version>2.4.4</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alicp.jetcache</groupId>
-			<artifactId>jetcache-redis</artifactId>
-			<version>2.4.4</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.alicp.jetcache</groupId>-->
+			<!--<artifactId>jetcache-anno</artifactId>-->
+			<!--<version>2.4.4</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>com.alicp.jetcache</groupId>-->
+			<!--<artifactId>jetcache-redis</artifactId>-->
+			<!--<version>2.4.4</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
