--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,5 +1,4 @@
 #Redis
-data.redis.defaultExpiration=3600
 redis.master.host=127.0.0.1
 redis.master.port=6379
 redis.master.password=
@@ -10,7 +9,7 @@ redis.sentinel2.host=
 redis.sentinel2.port=1
 redis.sentinel3.host=
 redis.sentinel3.port=1
-
+redis.master.timeout=3600
 redis.pool.maxTotal=500
 redis.pool.minIdle=100
 redis.pool.maxIdle=200
@@ -18,9 +17,9 @@ redis.pool.maxWaitMillis=5000
 redis.pool.testWhileIdle=true
 redis.pool.testOnBorrow=true
 redis.pool.testOnReturn=true
-#半个小时后清除掉多余的空闲链接  避免redis服务器连接数过多挂掉
+#\u534A\u4E2A\u5C0F\u65F6\u540E\u6E05\u9664\u6389\u591A\u4F59\u7684\u7A7A\u95F2\u94FE\u63A5  \u907F\u514Dredis\u670D\u52A1\u5668\u8FDE\u63A5\u6570\u8FC7\u591A\u6302\u6389
 redis.pool.timeBetweenEvictionRunsMillis=1800000
-#每次清除的空闲连接数
+#\u6BCF\u6B21\u6E05\u9664\u7684\u7A7A\u95F2\u8FDE\u63A5\u6570
 redis.pool.numTestsPerEvictionRun=20
 redis.pool.nodes=
 push.data.redis.defaultExpiration=3600
