--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>RELEASE</version>
+            <version>2.8.5</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
