--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
             <artifactId>springloaded</artifactId>
             <version>1.2.6.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
