--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <modules>
         <module>springboot-server-api</module>
         <module>springboot-server-impl</module>
+        <module>spi-example</module>
+        <module>spring-ioc</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -88,11 +90,6 @@
             <version>5.1.44</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
