--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,11 @@
             <artifactId>jol-core</artifactId>
             <version>0.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.7.2</version>
+        </dependency>
     </dependencies>
 
 
