--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <module>spi-example</module>
         <module>spring-ioc</module>
         <module>oauth-resource</module>
-        <module>oauth-server</module>
+        <module>oauth-authorization</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -73,6 +73,11 @@
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.1.1.RELEASE</version>
         </dependency>
         <!--zookeeper -->
         <dependency>
