--- a/springboot-server/src/main/resources/application.properties
+++ b/springboot-server/src/main/resources/application.properties
@@ -55,3 +55,20 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 #----------spring-mail\u914D\u7F6E-----------#end
+# dubbo
+#\u4F5C\u4E3A\u6D88\u8D39\u8005\u65F6\u7684\u5E94\u7528\u540D
+dubbo.application.id=dubbo-provider
+#\u4F5C\u4E3A\u63D0\u4F9B\u8005\u65F6\u7684\u5E94\u7528\u540D
+dubbo.application.name=dubbo-provider
+#zookeeper\u5730\u5740
+dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.server=true
+dubbo.protocol.name=dubbo
+#\u63D0\u4F9B\u670D\u52A1\u7684\u7AEF\u53E3
+dubbo.protocol.port=20880
+#\u8FDE\u63A5\u76D1\u63A7\u4E2D\u5FC3  \u6CD52\uFF1Aspring.dubbo.monitor.address=\u76D1\u63A7\u4E2D\u5FC3ip:\u76D1\u63A7\u4E2D\u5FC3\u901A\u4FE1\u7AEF\u53E3
+dubbo.monitor.protocol=registry
+#QOS\u914D\u7F6E\uFF0C\u5F53\u524Ddubbo\u7248\u672C(2.6.0)\u4E0D\u652F\u6301\u6B64\u914D\u7F6E
+#dubbo.application.qosEnable=true
+#dubbo.application.qosPort=33333
+#dubbo.application.qosAcceptForeignIp=false
