--- a/springboot-server/src/main/resources/application.properties
+++ b/springboot-server/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port=8080
 server.tomcat.uri-encoding=UTF-8
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+#1.5.8
+#spring.http.encoding.charset=UTF-8
+#spring.http.encoding.enabled=true
+#spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
+#2.3.1
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
 #--------\u65E5\u5FD7\u8F93\u51FA\u914D\u7F6E--------#start
 #\u4F7F\u7528springboot\u7684logging\u65E5\u5FD7\u8F93\u51FA\u4E0D\u8981\u5C06pom\u4E2D\u7684spring-boot-starter-logging\u6392\u9664
 #mybatis\u6253\u5370sql
@@ -39,8 +44,12 @@ email.attachmentName = ThrowingMessage
 email.template = message.ftl
 #----------E-mail\u914D\u7F6E-----------#end
 #-------elasticsearch\u914D\u7F6E------#start
-spring.data.elasticsearch.cluster-name = zjc-application
-spring.data.elasticsearch.cluster-nodes = 47.93.201.189:9300
+#1.5.8\u914D\u7F6E
+#spring.data.elasticsearch.cluster-name = zjc-application
+#spring.data.elasticsearch.cluster-nodes = 47.93.201.189:9300
+#2.3.1\u914D\u7F6E
+spring.elasticsearch.rest.username = zjc-application
+spring.elasticsearch.rest.uris = 47.93.201.189:9300
 httpHost.host=47.93.201.189
 httpHost.port=9200
 httpHost.schema=http
@@ -72,3 +81,5 @@ dubbo.monitor.protocol=registry
 #dubbo.application.qosEnable=true
 #dubbo.application.qosPort=33333
 #dubbo.application.qosAcceptForeignIp=false
+#\u5141\u8BB8\u6211\u4EEC\u81EA\u5DF1\u8986\u76D6spring\u653E\u5165\u5230IOC\u5BB9\u5668\u7684\u5BF9\u8C61\uFF08\u9047\u5230\u76F8\u540C\u7684\u540D\u5B57\u65F6\uFF0C\u662F\u5426\u5141\u8BB8\u8986\u76D6\u6CE8\u518C\uFF09
+spring.main.allow-bean-definition-overriding = true
